# cg-futebol

./: README.md  main.py  pyproject.toml
soccer/: ball.py  bresenham.py  button.py  collision.py  field.py  game.py  overlay.py  players.py  score.py
