[project]
name = "cg-futebol"
version = "0.1.0"
description = "Projeto AB1 - Computação Gráfica"
authors = [
    {name = "arthurpmrs", email = "apmrs@ic.ufal.br"},
    {name = "bea", email = "brc@ic.ufal.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
    "pygame>=2.6.1",
    "pyopengl>=3.1.9",
    "pyopengl-accelerate>=3.1.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
